--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,32 @@
 @import "tailwindcss";
 
+* {
+    cursor: none;
+}
+
+body,
+html {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+}
 
 .active {
-    color : black; 
+    color: black;
     background: #fff;
+}
+
+.custom-cursor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 30px;
+    height: 30px;
+    background-color: white;
+    /* border: 2px solid #fff; */
+    border-radius: 50%;
+    pointer-events: none;
+    z-index: 9999;
+    mix-blend-mode: difference;
+    /* optional, gives a cool inverted effect */
+    transition: transform 0.15s ease-out, width 0.2s, height 0.2s;
 }
